package reinferio.saltfish;

message RiakConf {
  optional string host = 1 [default = "127.0.0.1"];
  optional uint32 port = 2 [default = 10017];
}

message MariaDBConf {
  optional string host = 1      [default = "localhost"];
  optional string db = 2        [default = "mlaas"];
  optional string user = 3      [default = "root"];
  optional string password = 4  [default = ""];
}

message SaltfishConf {
  optional string bind_str = 1 [default = "tcp://127.0.0.1:5555"];

  optional uint32 max_generate_id_count = 2 [default = 1000];
  optional string sources_data_bucket_root = 3 [default = "/ml/sources/data/"];

  optional RiakConf riak = 4;
  optional MariaDBConf maria_db = 5;
}